Src/Tiger.Build/Compiler/Parsing/TigerParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g 2012-03-19 18:43:02

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


	using System;
	using Tiger.Build.Compiler.Ast;
	using Scope = Tiger.Build.Compiler.Common.Scope;
	using Tiger.Build.Compiler.Common;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;
namespace Tiger.Build.Compiler.Parsing
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "VBAR", "LBRACK", "RBRACK", "LCURLY", "SEMI", "RCURLY", "COMMA", "ASSIGN", "EQUAL", "COLON", "LPAREN", "RPAREN", "NAME", "AMPER", "LESS", "GREATER", "GREATEREQUAL", "LESSEQUAL", "NOTEQUAL", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "DOUBLESLASH", "DOUBLESTAR", "INT", "STRING", "DOT", "PLUSEQUAL", "MINUSEQUAL", "STAREQUAL", "SLASHEQUAL", "VBAREQUAL", "DOUBLESTAREQUAL", "DOUBLESLASHEQUAL", "DIGITS", "ESC", "NEWLINE", "WS", "COMMENT", "'match'", "'with'", "'->'", "'for'", "'in'", "'do'", "'if'", "'then'", "'else'", "'while'", "'to'", "'let'", "'end'", "'type'", "'array'", "'of'", "'var'", "'function'", "'not'", "'true'", "'false'", "'break'", "'continue'", "'nil'", "'return'"
	};
	public const int EOF=-1;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int VBAR=4;
	public const int LBRACK=5;
	public const int RBRACK=6;
	public const int LCURLY=7;
	public const int SEMI=8;
	public const int RCURLY=9;
	public const int COMMA=10;
	public const int ASSIGN=11;
	public const int EQUAL=12;
	public const int COLON=13;
	public const int LPAREN=14;
	public const int RPAREN=15;
	public const int NAME=16;
	public const int AMPER=17;
	public const int LESS=18;
	public const int GREATER=19;
	public const int GREATEREQUAL=20;
	public const int LESSEQUAL=21;
	public const int NOTEQUAL=22;
	public const int PLUS=23;
	public const int MINUS=24;
	public const int STAR=25;
	public const int SLASH=26;
	public const int PERCENT=27;
	public const int DOUBLESLASH=28;
	public const int DOUBLESTAR=29;
	public const int INT=30;
	public const int STRING=31;
	public const int DOT=32;
	public const int PLUSEQUAL=33;
	public const int MINUSEQUAL=34;
	public const int STAREQUAL=35;
	public const int SLASHEQUAL=36;
	public const int VBAREQUAL=37;
	public const int DOUBLESTAREQUAL=38;
	public const int DOUBLESLASHEQUAL=39;
	public const int DIGITS=40;
	public const int ESC=41;
	public const int NEWLINE=42;
	public const int WS=43;
	public const int COMMENT=44;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, true, false, false, false, false, false, false, true, false, 
				false, false, false, false, false, false, false, false, true, true, 
				false, true, false, false, true, true, false, false, false, true, false, 
				false, true, true, false, true, true, false, false, false, false, false, 
				false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public TigerParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{

		OnCreated();
	}
		

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules

	partial void Enter_program();
	partial void Leave_program();

	// $ANTLR start "program"
	// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:27:1: program returns [ProgramExpression expression] : e= test ;
	[GrammarRule("program")]
	private ProgramExpression program()
	{
		Enter_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		ProgramExpression expression = default(ProgramExpression);

		Expression e = default(Expression);

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(27, 1);
		try
		{
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:28:2: (e= test )
			DebugEnterAlt(1);
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:28:4: e= test
			{
			DebugLocation(28, 5);
			PushFollow(Follow._test_in_program64);
			e=test();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(28, 11);
			if ( state.backtracking == 0 )
			{
				expression=new ProgramExpression{Program=e, Start=e.Start};
			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			Leave_program();
		}
		DebugLocation(29, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return expression;

	}
	// $ANTLR end "program"


	partial void Enter_parse();
	partial void Leave_parse();

	// $ANTLR start "parse"
	// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:31:8: public parse returns [ProgramExpression expression] : e= program EOF ;
	[GrammarRule("parse")]
	public ProgramExpression parse()
	{
		Enter_parse();
		EnterRule("parse", 2);
		TraceIn("parse", 2);
		ProgramExpression expression = default(ProgramExpression);

		ProgramExpression e = default(ProgramExpression);

		try { DebugEnterRule(GrammarFileName, "parse");
		DebugLocation(31, 1);
		try
		{
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:33:2: (e= program EOF )
			DebugEnterAlt(1);
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:33:4: e= program EOF
			{
			DebugLocation(33, 5);
			PushFollow(Follow._program_in_parse90);
			e=program();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(33, 14);
			Match(input,EOF,Follow._EOF_in_parse92); if (state.failed) return expression;

			}

			if ( state.backtracking == 0 )
			{
				expression=e;
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("parse", 2);
			LeaveRule("parse", 2);
			Leave_parse();
		}
		DebugLocation(34, 1);
		} finally { DebugExitRule(GrammarFileName, "parse"); }
		return expression;

	}
	// $ANTLR end "parse"


	partial void Enter_expr_stmt();
	partial void Leave_expr_stmt();

	// $ANTLR start "expr_stmt"
	// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:36:1: expr_stmt returns [Expression expression] : (i= if_stmt | w= while_stmt | f= for_stmt | list= curly_list_stmt | let= let_stmt | fi= for_in_stmt | arr= array_init | match= match_stmt );
	[GrammarRule("expr_stmt")]
	private Expression expr_stmt()
	{
		Enter_expr_stmt();
		EnterRule("expr_stmt", 3);
		TraceIn("expr_stmt", 3);
		Expression expression = default(Expression);

		IfThenExpression i = default(IfThenExpression);
		WhileExpression w = default(WhileExpression);
		ForLoopExpression f = default(ForLoopExpression);
		ListSemiExpression list = default(ListSemiExpression);
		LetInExpression let = default(LetInExpression);
		ForInExpression fi = default(ForInExpression);
		ArrayInitExpression arr = default(ArrayInitExpression);
		MatchExpression match = default(MatchExpression);

		try { DebugEnterRule(GrammarFileName, "expr_stmt");
		DebugLocation(36, 1);
		try
		{
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:37:2: (i= if_stmt | w= while_stmt | f= for_stmt | list= curly_list_stmt | let= let_stmt | fi= for_in_stmt | arr= array_init | match= match_stmt )
			int alt1=8;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			try
			{
				alt1 = dfa1.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:37:4: i= if_stmt
				{
				DebugLocation(37, 5);
				PushFollow(Follow._if_stmt_in_expr_stmt109);
				i=if_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(37, 14);
				if ( state.backtracking == 0 )
				{
					expression=i;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:38:5: w= while_stmt
				{
				DebugLocation(38, 6);
				PushFollow(Follow._while_stmt_in_expr_stmt119);
				w=while_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(38, 18);
				if ( state.backtracking == 0 )
				{
					expression=w;
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:39:5: f= for_stmt
				{
				DebugLocation(39, 6);
				PushFollow(Follow._for_stmt_in_expr_stmt129);
				f=for_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(39, 16);
				if ( state.backtracking == 0 )
				{
					expression=f;
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:40:4: list= curly_list_stmt
				{
				DebugLocation(40, 8);
				PushFollow(Follow._curly_list_stmt_in_expr_stmt138);
				list=curly_list_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(40, 25);
				if ( state.backtracking == 0 )
				{
					expression=list;
				}

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:41:4: let= let_stmt
				{
				DebugLocation(41, 7);
				PushFollow(Follow._let_stmt_in_expr_stmt147);
				let=let_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(41, 17);
				if ( state.backtracking == 0 )
				{
					expression=let;
				}

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:42:4: fi= for_in_stmt
				{
				DebugLocation(42, 6);
				PushFollow(Follow._for_in_stmt_in_expr_stmt156);
				fi=for_in_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(42, 19);
				if ( state.backtracking == 0 )
				{
					expression=fi;
				}

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:43:4: arr= array_init
				{
				DebugLocation(43, 7);
				PushFollow(Follow._array_init_in_expr_stmt165);
				arr=array_init();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(43, 19);
				if ( state.backtracking == 0 )
				{
					expression=arr;
				}

				}
				break;
			case 8:
				DebugEnterAlt(8);
				// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:44:4: match= match_stmt
				{
				DebugLocation(44, 9);
				PushFollow(Follow._match_stmt_in_expr_stmt174);
				match=match_stmt();
				PopFollow();
				if (state.failed) return expression;
				DebugLocation(44, 21);
				if ( state.backtracking == 0 )
				{
					expression=match;
				}

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expr_stmt", 3);
			LeaveRule("expr_stmt", 3);
			Leave_expr_stmt();
		}
		DebugLocation(45, 1);
		} finally { DebugExitRule(GrammarFileName, "expr_stmt"); }
		return expression;

	}
	// $ANTLR end "expr_stmt"


	partial void Enter_match_stmt();
	partial void Leave_match_stmt();

	// $ANTLR start "match_stmt"
	// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:47:1: match_stmt returns [MatchExpression expression] : t= 'match' tx= program_list_comma 'with' ( ( VBAR )=>g= guard )+ ;
	[GrammarRule("match_stmt")]
	private MatchExpression match_stmt()
	{
		Enter_match_stmt();
		EnterRule("match_stmt", 4);
		TraceIn("match_stmt", 4);
		MatchExpression expression = default(MatchExpression);

		IToken t=null;
		IEnumerable<Expression> tx = default(IEnumerable<Expression>);
		GuardNode g = default(GuardNode);

		expression=new MatchExpression();
		try { DebugEnterRule(GrammarFileName, "match_stmt");
		DebugLocation(47, 1);
		try
		{
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:50:2: (t= 'match' tx= program_list_comma 'with' ( ( VBAR )=>g= guard )+ )
			DebugEnterAlt(1);
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:50:4: t= 'match' tx= program_list_comma 'with' ( ( VBAR )=>g= guard )+
			{
			DebugLocation(50, 5);
			t=(IToken)Match(input,45,Follow._45_in_match_stmt201); if (state.failed) return expression;
			DebugLocation(50, 16);
			PushFollow(Follow._program_list_comma_in_match_stmt205);
			tx=program_list_comma();
			PopFollow();
			if (state.failed) return expression;
			DebugLocation(50, 36);
			Match(input,46,Follow._46_in_match_stmt207); if (state.failed) return expression;
			DebugLocation(50, 43);
			// E:\\[Ariel]\\[Projects]\\Compiler\\TigerCompiler [c]\\Src\\Tiger.Build\\Compiler\\Parsing\\Tiger.g:50:43: ( ( VBAR )=>g= guard )+
			int cnt2=0;
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==VBAR))
				{
					int LA2_2 = input.LA(2);

					if ((EvaluatePredicate(synpred1_Tiger_fragment)))
					{
						alt2=1;
					}


				}

